--- a/packages/overseas-payment-merchant-operation-platform/src/pages/Merchant-Withdraw-Rqst/index.module.less
+++ b/packages/overseas-payment-merchant-operation-platform/src/pages/Merchant-Withdraw-Rqst/index.module.less
@@ -1,3 +1,20 @@
+.table-container{
+	width: 100%;
+	box-sizing: border-box;
+	padding: 24px;
+	background-color: #ffffff;
+	border-radius: 8px;
+	
+	
+	.table-header{
+		margin-bottom: 16px;
+		font-size: 18px;
+		color: #000000;
+	}
+	
+}
+
+
 .withdraw-modal{
 	:global{
 		.ant-modal-content{
@@ -20,52 +37,54 @@
 			font-size: 22px;
 		}
 	}
+	
+	.content-container {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		
+		.withdraw-amount{
+			font-weight: 600;
+			font-size: 12px;
+			color: rgba(22, 22, 26, 0.8);
+		}
+		
+		.form-input{
+			width: 100%;
+			text-align: left;
+			margin-bottom: 8px;
+		}
+		
+		.number{
+			font-weight: 600;
+			font-size: 36px;
+			color: #0070F3;
+			margin-bottom: 24px;
+			
+			.unit{
+				font-size: 16px;
+				margin-right: 6px;
+			}
+		}
+		
+		:global{
+			.ant-input{
+				height: 48px;
+				border-radius: 16px;
+			}
+			
+			.ant-btn{
+				width: 100%;
+				height: 48px;
+				border-radius: 12px;
+			}
+			
+			.ant-btn.ant-btn-primary{
+				margin-top: 24px;
+				margin-bottom: 14px;
+			}
+		}
+	}
 }
 
-.content-container {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	
-	.withdraw-amount{
-		font-weight: 600;
-		font-size: 12px;
-		color: rgba(22, 22, 26, 0.8);
-	}
-	
-	.form-input{
-		width: 100%;
-		text-align: left;
-		margin-bottom: 8px;
-	}
-	
-	.number{
-		font-weight: 600;
-		font-size: 36px;
-		color: #0070F3;
-		margin-bottom: 24px;
-		
-		.unit{
-			font-size: 16px;
-			margin-right: 6px;
-		}
-	}
-	
-	:global{
-		.ant-input{
-			height: 48px;
-			border-radius: 16px;
-		}
-		
-		.ant-btn{
-			width: 100%;
-			height: 48px;
-			border-radius: 12px;
-		}
-		
-		.ant-btn.ant-btn-primary{
-			margin-top: 24px;
-			margin-bottom: 14px;
-		}
-	}
-}
+
