--- a/packages/overseas-payment-merchant-background-admin/src/pages/Auth/index.module.less
+++ b/packages/overseas-payment-merchant-background-admin/src/pages/Auth/index.module.less
@@ -19,10 +19,9 @@ h1, h2, h3, h4, h5, h6 {
 	}
 	
 	.sign-in-form-wrapper {
-		display: flex;
-		flex-direction: column;
+		box-sizing: border-box;
+		min-width: 368px;
 		border-radius: 20px;
-		width: 100%;
 		background-color: #ffff;
 		padding: 24px;
 		
@@ -39,7 +38,6 @@ h1, h2, h3, h4, h5, h6 {
 		
 		:global {
 			.ant-input {
-				width: 320px;
 				height: 48px;
 				border-radius: 16px;
 				background: rgba(22, 22, 26, 0.04);
@@ -49,7 +47,6 @@ h1, h2, h3, h4, h5, h6 {
 			
 			
 			.ant-btn {
-				padding: 0 140px;
 				width: 100%;
 				height: 48px;
 				border-radius: 10px;
